--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.3",
+    "daisyui": "^4.12.23",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
+    "tailwindcss": "^3.4.17",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
