--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-server": "^19.1.0",
     "@angular/router": "^19.1.0",
     "@angular/ssr": "^19.1.3",
+    "@fortawesome/angular-fontawesome": "^1.0.0",
     "daisyui": "^4.12.23",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
